# odysseus

./: .gitignore  README.md  pyproject.toml
odysseus/: match_references.py  section.py  shorten.py
odyssey/: prompts.md  restructure.py  section.py
