[tool.poetry]
name = "odysseus"
version = "0.1.0"
description = "Takes your notes and turns them into a structured essay with OpenAI's API."
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ipykernel = "^6.25.0"
ipywidgets = "^8.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
